@@ -2,7 +2,6 @@ package uk.gov.hmcts.reform.fpl.ccddatamigration.s2s;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
-import org.apache.commons.lang3.StringUtils;
 
 @SuppressWarnings("squid:S1118")
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
@@ -11,7 +10,7 @@ public class AuthUtil {
     private static final String BEARER = "Bearer ";
 
     public static String getBearToken(String token) {
-        if (StringUtils.isBlank(token)) {
+        if (token == null || token.isBlank()) {
             return token;
         }
 
